--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>XYZ</title>
+    <style>
+.button {
+  background-color: black;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+  width: 150px;
+  height: 30px;
+}
+    </style>
 </head>
-<body>
-    <h1 style="text-align: center;">XYZ</h1>
-  
-    <iframe src="xyzproject.pdf" width="100%" height="600px"></iframe>
 
+<body><div style="background-image: url('bg.jpg'); width: 1521px; height: 679px;">
+    <br>
+        <p style="text-align: center;margin-top: 10%; font-size: large;"><b> You want to view XYZ Project Prototype, you can downlaod it and open with Axure.</b></p>
 
+            <table style="margin-left: 43%;">
+                <tr>
+                  <th><Button class="button" style="background-color: black; color: white;">
+<a href="https://drive.google.com/drive/folders/1ymm33c8MdZtofM0hTQcyMIG6VMn816P6" download="xyz.rp" style="color: white; text-decoration:none">Download</a>
+                    </Button>
+                </th>
+                  <th><Button class="button" style="background-color: black; color: white;"><a href="preview.html" style="color: white; text-decoration:none">Preview</a>
+                  </Button></th>
+                </tr>
+            </table>
+</div>
 </body>
 </html>
