--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>XYZ</title>
+    <title>orchidworld</title>
     <style>
 .button {
   background-color: black;
