--- a/preview.html
+++ b/preview.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>orchidworld</title>
 </head>
 <body>
-    <h1 style="text-align: center;">XYZ Tution Center</h1>
+    <h1 style="text-align: center;">Orchid World</h1>
   
-    <iframe src="xyzproject.pdf" width="100%" height="600px"></iframe>
+    <iframe src="orchidworldproject.pdf" width="100%" height="600px"></iframe>
 </body>
 </html>
